fixed search bar on iphone

--- a/assets/less/jomi/header.less
+++ b/assets/less/jomi/header.less
@@ -17,6 +17,7 @@ nav.site-header{
       position: relative;
       left: 5px;
       margin-top: 5px;
+      width: 100%;
    }
 
 
@@ -139,6 +140,14 @@ nav.site-header{
 .social-box{
    max-height: 40px;
    overflow: hidden;
+}
+
+@media (min-width: 380px){
+   nav.site-header{
+   input.search{
+      width: 223px;
+   }
+}
 }
 
 
